# renderer

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: MiniFB.h.EA323E893607155D.idx  MiniFB_GL.c.812F2355028699AC.idx  MiniFB_GL.h.F686D7B1070D62F1.idx  MiniFB_common.c.10C5A246303BF117.idx  MiniFB_cpp.cpp.E345DD7C25C2876A.idx  MiniFB_cpp.h.AF3976F4A9B1D9F2.idx  MiniFB_enums.h.8DF2DAD8D28F59C7.idx  MiniFB_internal.c.5B8D3E06EE8EFC39.idx  MiniFB_internal.h.10EC8A25603BDC01.idx  MiniFB_keylist.h.0CE78146F9492531.idx  MiniFB_linux.c.328930E844F42516.idx  MiniFB_macros.h.973F50C823D22984.idx  MiniFB_timer.c.5EE06D9830A15CC4.idx  MiniFB_types.h.1968BF8F87AB5484.idx  WindowData.h.B543A0716BCA5BF6.idx  WindowData_X11.h.A09FADB92C7E3837.idx  X11MiniFB.c.6EFBDD9D24D43765.idx  X11MiniFB_scale_funcs.c.DD49E5E3C25C2BFE.idx  X11MiniFB_scale_funcs.h.08330D09C8108102.idx  application.cpp.A9FA68336CB9B99C.idx  application.h.4F115EBB9FEDE3BA.idx  camera.cpp.0A6674E8E234D067.idx  camera.h.0922313AC269E48F.idx  fullscreen.c.3079231D93FD0F06.idx  hide_cursor.c.8958DCF4B4669375.idx  hidpi.c.F9B87B9FFEAC6CFF.idx  input.h.6C7FEB745CFF6719.idx  input_events.c.46C1F1091B3E8AA9.idx  input_events_cpp.cpp.F4169349138F9237.idx  main.cpp.8E9A56D61BA58B62.idx  mat4x4.cpp.8983B9D3D0E5B6CD.idx  mat4x4.h.44E76C9B7F814701.idx  (+18 more)
src/: application.cpp  application.h  camera.cpp  camera.h  input.h  main.cpp  mat4x4.cpp  mat4x4.h  object.cpp  object.h  rasterMath.cpp  rasterMath.h  renderer3D.cpp  renderer3D.h  texture.h  triangle.cpp  triangle.h  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  window.cpp  window.h
